[package]
name = "wlc"
version = "1.0.1"
authors = ["Drakulix <github@drakulix.de>"]
description = "Safe Bindings for Cloudef's wlc (Wayland Compositor C-Library)"
documentation = "https://drakulix.github.io/wlc.rs"
repository = "https://github.com/Drakulix/wlc.rs"
readme = "README.md"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings", "gui"]
license = "MIT"
exclude = [".travis.yml", ".rustfmt.toml", "vagga.yaml"]

[badges]
travis-ci = { repository = "Drakulix/wlc.rs" }

[dependencies]
wlc-sys = { path = "wlc-sys", version = "0.0.7" }
lazy_static = "0.2"
bitflags = "0.7"
num-traits = "^0.1.35"
xkbcommon = "0.2"
uinput-sys = "0.1"
libc = "0.2"
log = "0.3"
serde = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }
wayland-server = { version = "0.7", optional = true }

[features]
default = []
wayland = ["wayland-server"]
render = []
unsafe-stable = []
serialization = ["serde", "serde_derive"]
static = ["wlc-sys/static"]
